feat: various fixes(check scribblehub-scraper for proper PRs)
