# api/openapi.yaml
@@ -160,10 +160,6 @@ paths:
         required: true
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MatchDto'
           description: The match was updated and new matchstate and marketstates inserted.
       summary: Update a live match with a new matchState
       tags:
@@ -298,7 +294,7 @@ components:
         created_at: 2000-01-23T04:56:07.000+00:00
         id: 6
     PlayerDto:
-      $ref: '#/components/schemas/player-dto'
+      $ref: '#/components/schemas/player-dto_1'
     SportDto:
       $ref: '#/components/schemas/sport-dto_1'
     MatchDto:
@@ -344,8 +340,16 @@ components:
         properties:
           name:
             type: string
+          odd:
+            format: float
+            type: number
+          stakeLimit:
+            format: float
+            type: number
         required:
         - name
+        - odd
+        - stakeLimit
         type: object
     MarketStateDto:
       $ref: '#/components/schemas/market-state-dto_1'
@@ -434,14 +438,22 @@ components:
       description: A request body of a wager placed by a user on a marketState.
       properties:
         stake:
+          format: float
           minimum: 0
+          type: number
+        marketStateId:
+          format: int64
           type: integer
       required:
+      - marketStateId
       - stake
       type: object
     match-upsert-dto:
       description: Match between players with markets.
       properties:
+        id:
+          format: int64
+          type: integer
         name:
           type: string
         live:
@@ -450,10 +462,21 @@ components:
           $ref: '#/components/schemas/LeagueDto'
         sport:
           $ref: '#/components/schemas/sport-dto_1'
+        playerIds:
+          items:
+            format: int64
+            type: integer
+          type: array
         matchState:
           $ref: '#/components/schemas/match_upsert_dto_matchState'
       required:
+      - league
+      - live
+      - matchState
       - name
+      - playerIds
+      - players
+      - sport
       type: object
     match-dto:
       allOf:
@@ -535,6 +558,10 @@ components:
           stakeLimit:
             minimum: 0
             type: integer
+          market:
+            $ref: '#/components/schemas/MarketDto'
+          player:
+            $ref: '#/components/schemas/PlayerDto'
         required:
         - odd
         - stake_limit
@@ -628,8 +655,16 @@ components:
         properties:
           name:
             type: string
+          odd:
+            format: float
+            type: number
+          stakeLimit:
+            format: float
+            type: number
         required:
         - name
+        - odd
+        - stakeLimit
         type: object
     bet-status-dto:
       enum:
@@ -673,6 +708,10 @@ components:
           stakeLimit:
             minimum: 0
             type: integer
+          market:
+            $ref: '#/components/schemas/MarketDto'
+          player:
+            $ref: '#/components/schemas/PlayerDto'
         required:
         - odd
         - stake_limit
@@ -687,6 +726,26 @@ components:
           name:
             type: string
         required:
+        - name
+        type: object
+    player-dto_1:
+      allOf:
+      - $ref: '#/components/schemas/base-schema-id'
+      - $ref: '#/components/schemas/base-schema-dates'
+      - description: Sport listing available markets.
+        properties:
+          firstname:
+            type: string
+          lastname:
+            type: string
+          slug:
+            type: string
+          countryCode:
+            type: string
+        required:
+        - countryCode
+        - firstname
+        - lastname
         - name
         type: object
     match_upsert_dto_matchState:
